@@ -4,6 +4,9 @@
     src/tap/discovery.c: Extend urj_tap_detect API to allow callers to set
     the number of IR bits to detect.  Patch by Steve Tell.
 
+  * src/tap/register.c: Check incoming register arg before we use it.  Patch
+    by Steve Tell.
+
 2011-12-05  Mike Frysinger  <vapier@gentoo.org>
 
   * src/apps/jtag/jtag.c: Simplify readline ifdefs a little as suggested
